--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -5,4 +5,5 @@
 <label>Last Name: </label>
 <%=text_field_tag :'last_name'%>
 <%=hidden_field_tag :authenticity_token, form_authenticity_token%>
+<%= submit_tag "Submit Student"%>
 <% end %>
